--- a/MalishevBullKearney_Supp.Rmd
+++ b/MalishevBullKearney_Supp.Rmd
@@ -3,25 +3,25 @@ title: Appendices for ‘An individual-based model of ectotherm movement integra
 author: 
 - |-
   _^1^ Centre of Excellence for Biosecurity Risk Analysis, ^2^ School of BioSciences, University of Melbourne, Parkville, Melbourne, 3010, Australia_
-  ^['This Supplementary Material can be found at https://github.com/darwinanddavis/MalishevBullKearney or https://doi.org/10.5281/zenodo.998145.']
   _^3^ School of Biological Sciences, Flinders University, Adelaide, 5001, Australia_
+  ^['This Supplementary Material can be found at https://github.com/darwinanddavis/MalishevBullKearney or https://doi.org/10.5281/zenodo.998145.']
 bibliography: /Users/malishev/Documents/Melbourne Uni/Thesis_2016/library.bib
 output:
-  word_document:
-    highlight: tango
-    keep_md: yes
-    pandoc_args: --smart
-    reference: mystyles.docx
-    toc: yes
-  pdf_document:
-    template: null
-    toc: yes
   html_document:
     code_folding: hide
     depth: 3
     number_sections: no
     toc: yes
     toc_float: yes
+  pdf_document:
+    template: null
+    toc: yes
+  word_document:
+    highlight: tango
+    keep_md: yes
+    pandoc_args: --smart
+    reference: mystyles.docx
+    toc: yes
 inludes:
   before_body: before_body.tex
 subtitle: Matthew Malishev^1,2^*, C. Michael Bull^3^, & Michael R. Kearney^2^
@@ -1372,21 +1372,26 @@ JGR()
 p<-c("rJava", "RNetLogo")
 remove.packages(p)
 
-# install Netlogo and rJava from source if haven't already
-dir<- "<your working directory>"
-install.packages(paste0(dir,"/RNetLogo_1.0-2.tar.gz", repos = NULL, type="source"))
-install.packages(paste0(dir,"/rJava_0.9-8.tar.gz", repos = NULL, type="source"))
-library(RNetlogo); library(rJava)
+# install Netlogo and rJava from source if haven't already by downloading from CRAN
+# RNetlogo: https://cran.r-project.org/web/packages/RNetLogo/index.html
+# rJava: https://cran.r-project.org/web/packages/rJava/index.html
+dir<- "<directory where RNetlogo and rjava package sources are downloaded>"
+rnl <- "<RNetLogo package file name>" # e.g. "RNetLogo_1.0-4.tar.gz" 
+rj <- "<rJava package file name>" # e.g. "rJava_0.9-8.tar.gz" 
+install.packages(paste0(dir,"/",rnl, repos = NULL, type="source"))
+install.packages(paste0(dir,"/",rj, repos = NULL, type="source"))
+library(RNetLogo); library(rJava)
 ```
 
 #### For PC and working Mac OSX
 Source `DEB.R` and `onelump_varenv.R` from [**Github**]("https://github.com/darwinanddavis/MalishevBullKearney")
 ```{r eval=F, error=F, message=F, warning=F}
-# ------------------- for PC and working Mac OSX -----------------
+# ------------------- for PC and working Mac OSX ---------------------------
 # ------------------- model setup ---------------------------
 # get packages
-install.packages(c("NicheMapR","adehabitatHR","rgeos","sp", "maptools", "raster","rworldmap","rgdal","dplyr"))
-library(NicheMapR); library(adehabitatHR); library(rgeos); library(sp); library(maptools); library(raster); library(rworldmap); library(rgdal); library(dplyr)
+packages <- c("NicheMapR","adehabitatHR","rgeos","sp", "maptools", "raster","rworldmap","rgdal","dplyr")
+install.packages(packages,dependencies = T)
+lapply(packages,library,character.only=T)
 
 #source DEB and heat budget models from https://github.com/darwinanddavis/MalishevBullKearney
 source('DEB.R')
