--- a/MalishevBullKearney_Supp.Rmd
+++ b/MalishevBullKearney_Supp.Rmd
@@ -1355,32 +1355,31 @@ Energy and heat budget models, including microclimate model (.R). Available on [
 ```{r eval=F, error=F, message=F, warning=F}
 # RNL_new trans model_with DEB_1.6.2
 
-# ----------------------------------------------------------------
-# ------------------- initial Mac OS and R config ----------------
-# ----------------------------------------------------------------
-
-#if using Mac OSX Mountain Lion + and not already in JQR, download and open JGR 
-# after downloading, load JGR
-install.packages("JGR")
-Sys.setenv(NOAWT=1)
-library(JGR)
-Sys.unsetenv("NOAWT")
-JGR()
-
-# in JGR onwards
+# ---------------------------------------------------------------------------
+# ------------------- initial Mac OS and R config ---------------------------
+# ---------------------------------------------------------------------------
 # if already loaded, uninstall RNetlogo and rJava
 p<-c("rJava", "RNetLogo")
 remove.packages(p)
 
-# install Netlogo and rJava from source if haven't already by downloading from CRAN
-# RNetlogo: https://cran.r-project.org/web/packages/RNetLogo/index.html
-# rJava: https://cran.r-project.org/web/packages/rJava/index.html
-dir<- "<directory where RNetlogo and rjava package sources are downloaded>"
-rnl <- "<RNetLogo package file name>" # e.g. "RNetLogo_1.0-4.tar.gz" 
-rj <- "<rJava package file name>" # e.g. "rJava_0.9-8.tar.gz" 
-install.packages(paste0(dir,"/",rnl, repos = NULL, type="source"))
-install.packages(paste0(dir,"/",rj, repos = NULL, type="source"))
-library(RNetLogo); library(rJava)
+# if using Mac OSX El Capitan+ and not already in JQR, download and open JGR 
+
+# for a rJava error, run the following in terminal (src: https://stackoverflow.com/questions/30738974/rjava-load-error-in-rstudio-r-after-upgrading-to-osx-yosemite)
+# sudo ln -s $(/usr/libexec/java_home)/jre/lib/server/libjvm.dylib /usr/local/lib
+# then install rJava from source
+install.packages("rJava", repos = "https://cran.r-project.org/", type="source")
+library(rJava)
+
+# load JGR after downloading 
+Sys.setenv(NOAWT=1)
+install.packages("JGR")
+library(JGR)
+Sys.unsetenv("NOAWT")
+JGR() # open JGR
+
+# ------------------------- JGR onwards ----------------------------
+# install RNetlogo from source if haven't already
+install.packages("RNetLogo", repos = "https://cran.r-project.org/", type="source")
 ```
 
 #### For PC and working Mac OSX
